--- a/css/styles.css
+++ b/css/styles.css
@@ -548,3 +548,244 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     fill: #F4F4FD;
 }
 
+.footer-form {
+    margin-left: 80px;
+}
+
+.form-header {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin-bottom: 16px;
+}
+
+.footer-form-list {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-form-email {
+border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    display: flex;
+    padding-left: 16px;
+    align-items: center;
+}
+
+.footer-form-email::placeholder {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+            letter-spacing: 0.04em;
+            color: #FFFFFF;
+}
+
+.footer-form-btn {
+border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background-color: #4D5AE5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 24px;
+    gap: 16px;
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+            letter-spacing: 0.04em;
+            color: #FFFFFF;
+}
+
+.footer-plane {
+    fill: #FFFFFF;
+}
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(46, 50, 66, 0.4);
+    top: 0;
+    left: 0;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.modal {
+    background-color: #FCFCFC;
+    border-radius: 4px;
+    padding: 24px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    width: 408px;
+    min-height: 584px;
+    overflow-y: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.icon-close {
+    fill: #2E2F42;
+}
+
+.modal-close {
+    background-color: #E7E9FC;
+    border-radius: 100%;
+    stroke: rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border: none;
+    margin-bottom: 24px;
+    margin-left: auto;
+}
+
+.modal-header {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.2em;
+    text-align: center;
+    color: #2E2F42;
+    margin-bottom: 16px;
+}
+
+.modal-input {
+    width: 100%;
+    border: 1px solid #2E2F42;
+    border-radius: 4px;
+    height: 40px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 300ms ease-in-out;
+}
+
+.modal-input:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-input:focus + .modal-icon {
+    fill: #4D5AE5;
+}
+
+.modal-textarea {
+    width: 100%;
+    border: 1px solid #2E2F42;
+    border-radius: 4px;
+    height: 120px;
+    padding-left: 38px;
+    background-color: transparent;
+    resize: none;
+    padding: 8px 16px;
+    outline: transparent;
+    transition: border-color 300ms ease-in-out;
+}
+
+.modal-textarea:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-textarea::placeholder {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+            letter-spacing: 0.04em;
+            color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: rgba(142, 143, 153, 1);
+    display: block;
+    margin-bottom: 4px;
+}
+
+.modal-field {
+    margin-bottom: 8px;
+}
+
+.input-wrapper {
+    position: relative;
+}
+
+.modal-icon {
+position: absolute;
+left: 16px;
+top: 50%;
+transform: translateY(-50%);
+transition: fill 300ms ease-in-out;
+}
+
+.modal-check {
+    width: 16px;
+    height: 16px;
+}
+
+.modal-check:checked + .modal-check-text span {
+background-color: #404BBF;
+border: none;
+fill: #F4F4FD;
+}
+
+.modal-check-text {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+            letter-spacing: 0.04em;
+            color: #8E8F99;
+            display: flex;
+            align-items: center;
+}
+
+.modal-check-text span {
+    border-radius: 2px;
+        border: 1px solid #2E2F42;
+        width: 16px;
+            height: 16px;
+            margin-right: 8px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            fill: transparent;
+}
+
+.modal-btn {
+    margin: 0 auto;
+    display: flex;
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #4D5AE5;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+}
