--- a/css/styles.css
+++ b/css/styles.css
@@ -576,20 +576,25 @@ border: 1px solid #FFFFFF;
     display: flex;
     padding-left: 16px;
     align-items: center;
+    font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        padding-left: 16px;
+        color: #FFFFFF;
 }
 
 .footer-form-email::placeholder {
     font-weight: 400;
         font-size: 12px;
         line-height: 2;
-            letter-spacing: 0.04em;
-            color: #FFFFFF;
+        letter-spacing: 0.04em;
+        color: #FFFFFF;
 }
 
 .footer-form-btn {
-border-radius: 4px;
+    border-radius: 4px;
     padding: 8px 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
     background-color: #4D5AE5;
     display: flex;
@@ -597,15 +602,19 @@ border-radius: 4px;
     justify-content: center;
     padding: 8px 24px;
     gap: 16px;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-            letter-spacing: 0.04em;
-            color: #FFFFFF;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    cursor: pointer;
+    border: none;
 }
 
 .footer-plane {
     fill: #FFFFFF;
+    margin-left: 16px;
 }
 
 .modal-overlay {
