--- a/css/styles.css
+++ b/css/styles.css
@@ -621,13 +621,14 @@ border: 1px solid #FFFFFF;
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: rgba(46, 50, 66, 0.4);
+    background-color: rgba(46, 47, 66, 0.4);
     top: 0;
     left: 0;
     z-index: 999;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -639,7 +640,7 @@ border: 1px solid #FFFFFF;
 .modal {
     background-color: #FCFCFC;
     border-radius: 4px;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     width: 408px;
     min-height: 584px;
@@ -648,31 +649,46 @@ border: 1px solid #FFFFFF;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close {
     fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close:hover, .icon-close:focus {
+    fill: #ffffff;
 }
 
 .modal-close {
-    background-color: #E7E9FC;
-    border-radius: 100%;
-    stroke: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 24px;
-    height: 24px;
-    border: none;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 24px;
-    margin-left: auto;
+}
+
+.modal-close:hover, .modal-close:focus {
+    background-color: #404bbf;
+    border: none;
 }
 
 .modal-header {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.02em;
     text-align: center;
     color: #2E2F42;
     margin-bottom: 16px;
@@ -680,13 +696,13 @@ border: 1px solid #FFFFFF;
 
 .modal-input {
     width: 100%;
-    border: 1px solid #2E2F42;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     height: 40px;
     background-color: transparent;
     padding-left: 38px;
     outline: transparent;
-    transition: border-color 300ms ease-in-out;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -699,7 +715,7 @@ border: 1px solid #FFFFFF;
 
 .modal-textarea {
     width: 100%;
-    border: 1px solid #2E2F42;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     height: 120px;
     padding-left: 38px;
@@ -707,7 +723,11 @@ border: 1px solid #FFFFFF;
     resize: none;
     padding: 8px 16px;
     outline: transparent;
-    transition: border-color 300ms ease-in-out;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-size: 12px;
+    line-height: 1.17;
+    color: rgba(46, 47, 66, 0.4);
+    letter-spacing: 0.04em;
 }
 
 .modal-textarea:focus {
@@ -716,16 +736,16 @@ border: 1px solid #FFFFFF;
 
 .modal-textarea::placeholder {
     font-weight: 400;
-        font-size: 12px;
-        line-height: 1.16667;
-            letter-spacing: 0.04em;
-            color: rgba(46, 47, 66, 0.4);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-label {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(142, 143, 153, 1);
     display: block;
@@ -734,6 +754,10 @@ border: 1px solid #FFFFFF;
 
 .modal-field {
     margin-bottom: 8px;
+}
+
+.modal-field-text {
+    margin-bottom: 16px;
 }
 
 .input-wrapper {
@@ -745,7 +769,11 @@ position: absolute;
 left: 16px;
 top: 50%;
 transform: translateY(-50%);
-transition: fill 300ms ease-in-out;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field-check {
+    margin-bottom: 24px;
 }
 
 .modal-check {
@@ -761,40 +789,45 @@ fill: #F4F4FD;
 
 .modal-check-text {
     font-weight: 400;
-        font-size: 12px;
-        line-height: 1.17;
-            letter-spacing: 0.04em;
-            color: #8E8F99;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
             display: flex;
             align-items: center;
 }
 
-.modal-check-text span {
+.modal-check-span {
     border-radius: 2px;
-        border: 1px solid #2E2F42;
-        width: 16px;
-            height: 16px;
-            margin-right: 8px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            fill: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    width: 16px;
+    height: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    fill: transparent;
+}
+
+.modal-span-link {
+    color: #4d5ae5;
+    text-decoration: underline;
 }
 
 .modal-btn {
-    margin: 0 auto;
-    display: flex;
-    border-radius: 4px;
-    padding: 16px 32px;
-    width: 169px;
+    display: block;
+    min-width: 169px;
     height: 56px;
+    margin: 0 auto;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #4D5AE5;
-    align-items: center;
-    justify-content: center;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFFFFF;
+    cursor: pointer;
 }
