--- a/css/styles.css
+++ b/css/styles.css
@@ -682,6 +682,7 @@ border: 1px solid #FFFFFF;
 .modal-close:hover, .modal-close:focus {
     background-color: #404bbf;
     border: none;
+    fill: #ffffff
 }
 
 .modal-header {
