--- a/css/styles.css
+++ b/css/styles.css
@@ -679,9 +679,11 @@ border: 1px solid #FFFFFF;
     margin-bottom: 24px;
 }
 
-.modal-close:hover, .modal-close:focus {
-    background-color: #404bbf;
-    border: none;
+.modal-close:hover {
+    fill: #ffffff
+}
+
+.modal-close:focus {
     fill: #ffffff
 }
 
@@ -800,11 +802,11 @@ fill: #F4F4FD;
 
 .modal-check-span {
     border-radius: 2px;
+    display: inline-flex;
     border: 1px solid rgba(46, 47, 66, 0.4);
     width: 16px;
     height: 16px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
     justify-content: center;
     align-items: center;
     fill: transparent;
