--- a/css/styles.css
+++ b/css/styles.css
@@ -680,13 +680,13 @@ border: 1px solid #FFFFFF;
 }
 
 .modal-close:hover {
-    fill: #ffffff;
+    fill: #FFFFFF;
     background-color: #404bbf;
     border: none;
 }
 
 .modal-close:focus {
-    fill: #ffffff;
+    fill: #FFFFFF;
     background-color: #404bbf;
     border: none;
 }
