--- a/css/styles.css
+++ b/css/styles.css
@@ -803,7 +803,7 @@ fill: #F4F4FD;
 }
 
 .modal-check-span {
-    display: flex;
+    display: inline-flex;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     width: 16px;
